# crossover-study

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  VERSION.in  build.sh  compare.py  config.yml  example.config.yml  experiment.config.yml  install-paradiseo.sh  install_dependencies.sh  instd.sh  model.db  reDeloy.sh  requirements.txt  scratch.db  setcovering-experiments.yml  start.py  trigger.py
.github/workflows/: ccpp.yml
Resultados/: Knapsack.sqlite  steind3_tests.sqlite
Source/: CMakeLists.txt  macros.h  main.cxx  problems.hxx
Source/ga/: crossover_fabric.cpp  crossover_fabric.h
Source/mc/: matrix.h  max_clique.cxx
ccr/: CMakeLists.txt
ccr/include/ccr/: CMakeLists.txt
ccr/include/ccr/ga/: genetic_algorithm.cpp  problem.h
ccr/include/config/: CMakeLists.txt
ccr/src/: argparser.h  args.hxx  main.cpp  settings.h
ccr/test/: CMakeLists.txt  test_configuration.cpp  test_crossover_fabric.cpp  test_io.cpp
cr/: CMakeLists.txt  args.h  main.cpp  test.yaml
cr/ga/: crossover_fabric.cpp  crossover_fabric.h  genetic_algorithm.h
cr/include/config/: CMakeLists.txt  configuration.cpp  configuration.h
cr/include/ga/: chromosome.h  crossover_fabric.h  genetic_algorithm.cpp
cr/include/io/: CMakeLists.txt  dimacs_reader.cpp  dimacs_reader.h
cr/src/: args.hpp  main.cpp
data/: README.md  brock400_3.clq  fb-pages-food.clq  socfb-Wesleyan43.clq
data/mcp/: delaunay_n10.clq  socfb-Haverford76.clq
data/mkp/: mknap1.4.txt  mknap1.5.txt  mknap11.txt  mknapcb1.2.txt  mknapcb13.txt  mknapcb21.txt  mknapcb23.txt  mknapcb24.txt  mknapcb33.txt  mknapcb34.txt  mknapcb61.txt  mknapcb62.txt  mknapcb63.txt  mknapcb64.txt  mknapcb65.txt  mknapcb66.txt  mknapcb91.txt  mknapcb92.txt  mknapcb93.txt
database/: first_tests.db
deprecated-src/: main.cxx  problem_fabric.cxx
deprecated-src/scp/: set_covering_problem.cpp
diagrams/: Geral.dia  MER.dia  Relacional.dia
doc/: DESIGN_PATTERNS.md  Database_Tables.dia  GaClassDiagrams.dia  InstanciasUsadas.md  SCP.md
include/: CMakeLists.txt
include/ccr/: CMakeLists.txt
include/ccr/ga/: encoding.h  genetic_algorithm.h  problem.cpp  problem.h  random.cpp
include/ccr/io/: utils.h
include/cli/: options.h  parse.h
include/config/: config_error.h
include/core/: CMakeLists.txt  time_parse.hpp
include/core/cli/: cli.cpp  options.h  parse.h
include/core/db/: base_model.hpp  create.hpp  database.hpp  database_strategy.hpp  entry.hpp  modes.hpp  table_controller.hpp
include/core/ga/: encoding.h  entropy.cpp  entropy.h  ga_factory.h  genetic_algorithm.cpp  genetic_algorithm.h  problem.cpp  problem.h  random.cpp  random.h
include/core/utils/: logger.h  logging.hpp  parse_duration.cpp  parse_duration.h  split.cpp  trim_filename.cpp  trim_filename.h  vectors.cpp  vectors.h
include/db/: database_entry.cpp  database_entry.hpp
include/ga/: crossover_fabric.cpp  crossover_fabric.h  genetic_algorithm.cpp  genetic_algorithm.h  problem.cpp  problem.h  random.cpp  random.h
include/io/: dimacs_reader.h  utils.cpp
mc/: CMakeLists.txt  argparser.h  boolean_matrix.h  main.cxx  maximum_clique_problem.cxx  maximum_clique_problem.h
mk/: mknap.cxx
notebooks/: Maxclique.sqlite
python-trigger/: README.md
pyutils/: __init__.py  command.py  config_file.py  database.py  output_format.py  runner.py
results/: ArvoreDeSteiner_C3.sqlite  ArvoreDeSteiner_C4.sqlite
results/primeiros_experimentos/: Mwcp.eps  scp4.eps  (+6 more)
runner/: command.py  runner.py
sc/: set_covering.cxx
scripts/: execOnContainer.py  experiment-status.py  experiment.py  expermient.py  instance-info.py  instd.sh  plotdata.py  reDeloy.sh  upcontainer.py
setcovering/: CMakeLists.txt  main.cpp  set_covering_problem.cpp  set_covering_problem.h  solution.h
source/: run.cxx
source/mc/: CMakeLists.txt  boolean_matrix.h  main.cxx  maximum_clique_problem.cxx
source/mk/: CMakeLists.txt  main.cxx  mknap_problem.cxx  mknap_problem.h
src/: CMakeLists.txt  Runner.h  main.cpp  main.cxx  problem_fabric.cpp  problem_fabric.h  run.cpp  version.h
src/cli/: options.h  parse.h
src/db/: database_entry.cpp  database_entry.hpp
src/ga/: problem.cpp  problem.h
src/io/: dimacs_reader.cpp
src/maxclique/: CMakeLists.txt  main.cpp  main.cxx  maximum_clique_problem.cpp  maximum_clique_problem.h  maximum_weighted_clique_problem.cpp  maximum_weighted_clique_problem.h  mcp_database.cpp  mcp_database.hpp  solution.h  test  test_matrix.cpp  weighted_matrix.hpp
src/maximum_clique/: CMakeLists.txt  main.cxx  mcp_database.cxx  mcp_database.hpp
src/mcp/: graph.h  main.cxx  maximum_clique_problem.cpp
src/mk/: CMakeLists.txt  main.cxx  mknap_problem.h
src/mknapsack/: CMakeLists.txt  main.cpp  mknap_model.cpp  mknap_model.h  mknap_problem.cpp  mknap_problem.h  mknap_table.cpp
src/mkp/: m_knapsack_problem.cpp  m_knapsack_problem.h  main.cpp
src/multi_knapsack/: CMakeLists.txt  mknap_problem.h
src/multidimensional_knapsack/: CMakeLists.txt  main.cxx  mknap_problem.cxx  mknap_problem.h  mknap_table.cxx  mknap_table.h
src/sc/: CMakeLists.txt  main.cpp  scp_matrix.cpp  scp_matrix.h  set_covering_problem.cpp  set_covering_problem.h  subset.cpp  subset.h
src/scp/: main.cpp  set_covering_problem.cpp  set_covering_problem.h  solution.h
src/set_covering/: CMakeLists.txt  genetic_algorithm_scp.cpp  main.cpp  scp_table.cpp
src/setcovering/: CMakeLists.txt  decoder.h  genetic_algorithm_scp.h  main.cpp  scp_matrix.h  scp_model.cpp  scp_model.h  scp_table.cpp  scp_table.h  set_covering_problem.cpp  set_covering_problem.h
src/st/: CMakeLists.txt  main.cpp  minimum_spanning_tree.h  steiner_tree.cpp  steiner_tree.h
src/steiner_tree/: CMakeLists.txt  graph.h  main.cpp  steiner_tree_table.h
src/steinertree/: CMakeLists.txt  main.cpp  minimum_spanning_tree.cpp  steiner_tree.cpp  steiner_tree.h  steiner_tree_model.cpp  steiner_tree_model.h  steiner_tree_table.cpp
starter/: __init__.py  command.py
test/: CMakeLists.txt  test_cli_instance.cpp  test_configuration.cpp  test_crossover_fabric.cpp  test_utils.cpp
(+29 files in other folders)
